# AI-Gadget

./: .gitignore  CMakeLists.txt  README.md  display.env  main.env  partitions_lcd.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
ai_gadget_main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
ai_gadget_main/src/: AudioLib.cpp  AudioLib.h  app_io.cpp  app_io.h  app_sdcard.cpp  app_sdcard.h  config.h  main_app.cpp  main_app.h  main_board_api.h  prefs.cpp  prefs.h  task_scheduler.cpp  task_scheduler.h  uart_cmd.cpp  uart_cmd.h  vibration.cpp  vibration.h  wifi_utils.cpp  wifi_utils.h
ai_gadget_main/src/ai/: ai.cpp  ai.h
ai_gadget_main/src/compat/: FS.cpp  FS.h  compat.cpp  compat.h
ai_gadget_main/src/player/: audio_player_proxy.cpp  audio_player_proxy.h  player.cpp  player.h
ai_gadget_main/src/tasks/: ahtxx_task.cpp  ahtxx_task.h  battery_task.cpp  battery_task.h  light_task.cpp  light_task.h  rtc_task.cpp  rtc_task.h  sgp4x_task.cpp  sgp4x_task.h  weather_task.cpp  weather_task.h
components/78__esp-opus-encoder/: .component_hash  CMakeLists.txt  idf_component.yml
components/FileMeta/: CMakeLists.txt
components/SC7A20/: CMakeLists.txt
components/StreamProtocol/: CMakeLists.txt
components/common/: CMakeLists.txt
components/esp_audio_player/: audio_mp3.cpp  audio_mp3.h  audio_player.cpp  (+2 more)
display_board/: CMakeLists.txt  idf_component.yml  platformio.ini
display_board/doc/: HL028BWV8483BNT.txt
display_board/include/: lv_conf.h
display_board/lib/GFXLibrary_for_Arduino/: CMakeLists.txt  idf_component.yml
display_board/lib/GFXLibrary_for_Arduino/src/databus/: Arduino_ESP32RGBPanel.cpp  Arduino_XCA9554SWSPI.cpp
display_board/lib/GFXLibrary_for_Arduino/src/display/: Arduino_RGB_Display.h
display_board/lib/esp_io_expander_tca9554/: CHECKSUMS.json
display_board/src/: config.h  display.cpp  display.h  lcd_app.cpp  lcd_app.h  main.cpp  touch.cpp  touch.h  uart_cmd.cpp  uart_cmd.h
display_board/src/ui/: ai_ui.cpp  ai_ui.h  app_theme.c  app_theme.h  face_ui.cpp  face_ui.h  main_ui.cpp  main_ui.h  resources.h  time_model.cpp  time_model.h  time_ui.cpp  time_ui.h  ui_lib.cpp  ui_lib.h  ui_player.cpp  ui_player.h  ui_player_crtl.cpp  ui_player_crtl.h  ui_player_inc.h  ui_player_list.cpp  ui_player_list.h  ui_player_presenter.cpp  ui_player_presenter.h  ui_presenter.h  weather_layout.cpp  weather_layout.h
display_board/src/ui/fonts/: SF_UI_Text_120.c  SF_UI_Text_18.c  SF_UI_Text_28.c  SF_UI_Text_b_120.c  SF_UI_Text_b_28.c  SF_UI_Text_m_28.c  emoji_font.c  emoji_font.h  fonts_list.mk
display_board/src/ui/fonts/emoji/: f266a.c  f602.c  f606.c  f609.c  f60c.c  f60d.c  f60e.c  f60f.c  f614.c  f618.c  f61c.c  f620.c  f62d.c  f62f.c  f631.c  f633.c  f634.c  f636.c  f642.c  f644.c  f914.c  f924.c  f92a.c
display_board/src/ui/images/: ic_clean.c  ic_close.c  ic_critical_battery.c  ic_high_battery.c  ic_humidity.c  ic_low_battery.c  ic_medium_battery.c  ic_nox.c  ic_player_btn_loop.c  ic_player_btn_next.c  ic_player_btn_pause.c  ic_player_btn_play.c  ic_player_btn_prev.c  ic_player_btn_rnd.c  ic_player_slider_knob.c  ic_setting_active.c  ic_setting_inactive.c  ic_temperature.c  ic_voc.c  ic_voice_cancel.c  ic_voice_normal.c  ic_voice_press.c  images_list.mk  images_md5.json  img_player_list_border.c  img_player_list_folder.c  img_player_list_pause.c  img_player_list_play.c  weather0.c  weather1.c  weather10.c  weather11.c  weather12.c  weather13.c  weather14.c  weather15.c  weather16.c  weather17.c  weather18.c  weather19.c  (+28 more)
main_board/: CMakeLists.txt  application.cc  idf_component.yml  main_api.cc  main_api.h
scripts/: emoji.py
(+28 files in other folders)
